--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -76,18 +76,18 @@
   position: relative;
 }*/
 
-/*------------------ Statistics ------------------*/
+/*------------------ content ------------------*/
 
-#statistics{
+#content{
   margin-top: 20px;
 }
 
-#statistics h2{
+#content h2{
   padding-bottom: 20px;
   border-bottom: 2px solid black;
 }
 
-#statistics #statistics_image{
+#content #content_image{
   margin-top: 20px;
 }
 
@@ -113,18 +113,15 @@ ul.unstyled li{
   margin-bottom: 8px;
 }
 
-#footer .likes ul li{
-  display: inline;
-}
 #footer{
   background-color: grey;
 
 }
-#footer .likes img{
+/*#footer .likes img{
   width: 35px;
   height: 35px;
   margin-bottom: 5px;
-}
+}*/
 
 /*---------------- General ------------------*/
 .siteName{
@@ -143,35 +140,35 @@ ul.unstyled li{
 
 /*------------------------------------ PortFolio.html ---------------------------------------------------
 -------------------------------------------------------------------------------------------------------*/
-#portfolio_head{
+#port{
   margin: 60px 0 0 0;
   background-color: #EAECDA;
   padding: 50px 0;
   font-family: sans-serif;
 }
 
-#portfolio_head h1{
+#port h1{
   margin-top: 0;
 }
 
-#portfolio_head p{
+#port p{
   font-size: 16px;
 }
 
-#portfolio_head ul{
+#port ul{
   margin-top: 25px;
 }
 
-#portfolio_head ul.unstyled li{
+#port ul.unstyled li{
   margin-bottom: 0px;
   display: inline;
 }
 
-#portfolio_head ul.unstyled li a{
+#port ul.unstyled li a{
   font-size: 15px;
 }
 
-#portfolio_head ul.unstyled li a.active{
+#port ul.unstyled li a.active{
   color: #fff;
 
 }
@@ -246,7 +243,7 @@ ul.unstyled li{
      background-size: 100% 100%;
    }
 
- #statistics #statistics_image img{
+ #content #content_image img{
    float: none !important;
  }
 
@@ -278,13 +275,13 @@ footer #web_maintenance{
 }
 
 @media(max-width: 610px){
-  #portfolio_head p{
+  #port p{
     font-size: 14px;
   }
-  #portfolio_head h1{
+  #port h1{
     font-size: 28px;
   }
-  #portfolio_head ul.unstyled li a{
+  #port ul.unstyled li a{
     font-size: 13px;
   }
   #showcase .col-xs-4{
@@ -312,7 +309,7 @@ footer #web_maintenance{
 }
 
 @media (max-width: 354px){
-  #portfolio_head ul{
+  #port ul{
     margin-top: 32px;
   }
   .showcase_unit .img-responsive{
@@ -328,7 +325,7 @@ footer #web_maintenance{
 }
 
 @media(max-width: 320px){
-   #statistics #statistics_image img, #web_insight #web_insight_image img{
+   #content #content_image img, #web_insight #web_insight_image img{
      width: 200px;
    }
    #myCarousel .carousel-inner .item{
@@ -346,22 +343,22 @@ footer #web_maintenance{
    .siteLogo{
      font-size: 20px;
    }
-   #portfolio_head p{
+   #port p{
      font-size: 12px;
    }
-   #portfolio_head h1{
+   #port h1{
      font-size: 20px;
    }
-   #portfolio_head ul.unstyled li a{
+   #port ul.unstyled li a{
      font-size: 11px;
    }
-   #portfolio_head ul{
+   #port ul{
      margin-top: 15px;
    }
 }
 
 @media(max-width: 235px){
-   #statistics #statistics_image img, #web_insight #web_insight_image img{
+   #content #content_image img, #web_insight #web_insight_image img{
      width: 150px;
    }
    #myCarousel .carousel-inner .item{
