--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -97,6 +97,10 @@ footer{
   margin-top: 20px;
   background-color: #9999ff;
   border-top: 1px solid #4dffa6;
+  text-align: center;
+}
+#footer p{
+  text-align: center;
 }
 
 footer h4{
@@ -104,7 +108,9 @@ footer h4{
   margin-bottom:15px;
   padding-left: 5px;
 }
-
+.breadcrumb{
+  background: none;
+}
 ul.unstyled{
   padding-left: 10px;;
 }
