--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -128,9 +128,9 @@ ul.unstyled{
 
 }
 /*---------------- General ------------------*/
-.siteName{
-  color: #996533;
-}
+/*.siteName{
+  color:;
+}*/
 
 .glyphicon{
   margin-right: 5px;
@@ -146,7 +146,7 @@ ul.unstyled{
 -------------------------------------------------------------------------------------------------------*/
 #port{
   margin: 60px 0 0 0;
-  background-color: #EAECDA;
+  background-color: #F5F5F5;
   padding: 50px 0;
   font-family: sans-serif;
 }
